--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -12,6 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Test"
+            android:fontFamily="@font/jetbrains_mono_bold_italic"
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"/>
